--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -46,6 +46,8 @@
         </footer>
     </div>
 
+    <!-- <script scr="/src/index.js"></script> -->
+    <!-- <script scr="main.js"></script> -->
 </body>
 
 </html>
