--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,15 +15,10 @@
 </head>
 
 <body>
+    <div class="overlay" id="loading-overlay">Loading...</div>
+    <div class="overlay" id="message-overlay"></div>
     <div class="grid-container">
-        <header>
-            <div class="brand">
-                <a href="/#/">qShop</a>
-            </div>
-            <div>
-                <a href="/#/signin">Sign-In</a>
-                <a href="/#/cart">Cart</a>
-            </div>
+        <header id="header-container">
         </header>
 
         <main id="main-container">
